'上传个人主页'

--- a/index.html
+++ b/index.html
@@ -1,10 +1,427 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <title>闫宣先个人站</title>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/iconfont.css"/>
+    <link rel="stylesheet" href="css/font.css"/>
+    <link rel="stylesheet" href="css/response.css"/>
+    <link rel="stylesheet" href="css/animation.css"/>
+    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/index.js"></script>
 </head>
 <body>
-	welcome to my homepage!
+<!--navlg start-->
+<div class="nava">
+    <div class="container">
+        <div class="row flo">
+            <div class="col-lg-1"></div>
+            <div class="co-o"><a href="" class="page-scroll col-lg-1"><span>&#xe600</span>Options</a></div>
+            <div class="col-lg-2"></div>
+            <div><a href="" class="page-scroll col-lg-1">About</a></div>
+            <div><a href="" class="page-scroll col-lg-2">Skills</a></div>
+            <div><a href="" class="page-scroll col-lg-2">Experience</a></div>
+            <div><a href="" class="page-scroll col-lg-2">Portfolio</a></div>
+            <div><a href="" class="page-scroll col-lg-1">Contact</a></div>
+        </div>
+    </div>
+</div>
+<!--navlg end-->
+
+<!--navsm start-->
+<div class="navb">
+    <div class="container">
+        <div class="row">
+            <div class="menu-o"><a href="" class="page-scroll"><span>&#xe600</span>Options</a></div>
+            <div class="menu-img">&#xe601</div>
+        </div>
+    </div>
+</div>
+<div class="menu">
+    <div><a href="" class="page-scroll">About</a></div>
+    <div><a href="" class="page-scroll">Skills</a></div>
+    <div><a href="" class="page-scroll">Experience</a></div>
+    <div><a href="" class="page-scroll">Portfolio</a></div>
+    <div><a href="" class="page-scroll">Contact</a></div>
+</div>
+<!--navsm end-->
+
+<!--banner start-->
+<div id="page-top" class="banner">
+    <div class="text">
+        <h1>We work with passion<br/> to make good design prevail</h1>
+        <p class="wui">I’m a WUI designer born in China</p>
+        <p><a class="btn" href="#portfolio">Learn more</a></p>
+    </div>
+    <div class="con">
+        <a href="javascript:;" class="lead-link">Continua
+            <div class="up" data-icon="up"></div>
+        </a>
+    </div>
+    <div class="banner-img">
+        <img src="img/home-bg.jpg" alt=""/>
+    </div>
+</div>
+<!--banner end-->
+
+<!--about start-->
+<div id="about-m" class="about">
+    <div class="container">
+        <div class="about-top">
+            <h3 class="top-title">About Me</h3>
+            <span class="line"></span>
+        <div class="row">
+            <div class="head-img">
+                <img src="" alt=""/>
+            </div>
+        </div>
+            <div class="row">
+                <p class="about-p">
+                    Hello! I am a computer science graduates. Thank you for your busy schedule to take some time to read this , provided me with a chance of success. 
+                </p>
+                <p>
+                    In the four years of  study and life, I studied the content ranging from basic computer knowledge to use and many other aspects. Of these knowledge, I have knowledge in this field have a certain degree of understanding and mastering, this is a professional tool, and the ability to make use of this tool is the most important, in parallel with a variety of courses relevant and practical in practice, with a certain degree of practical ability and technology.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<!--about end-->
+
+<!--skills start-->
+<div id="skills">
+    <div class="container">
+        <div class="skills-top">
+            <h3 class="top-title">My Skills</h3>
+            <span class="line"></span>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-4 skill">
+                <span class="chart">
+                    <canvas width="145px" height="145px" class="canvas1"></canvas>
+                </span>
+                <h4>HTML5</h4>
+            </div>
+            <div class="col-sm-6 col-md-4 skill">
+                <span class="chart">
+                    <canvas width="145px" height="145px" class="canvas2"></canvas>
+                </span>
+                <h4>CSS3</h4>
+            </div>
+            <div class="col-sm-6 col-md-4 skill">
+                <span class="chart">
+                    <canvas width="145px" height="145px" class="canvas3"></canvas>
+                </span>
+                <h4>javascript</h4>
+            </div>
+            <div class="col-sm-6 col-md-4 skill">
+                <span class="chart">
+                   <canvas width="145px" height="145px" class="canvas4"></canvas>
+                </span>
+                <h4>jQuery</h4>
+            </div>
+            <div class="col-sm-6 col-md-4 skill">
+                <span class="chart">
+                    <canvas width="145px" height="145px" class="canvas5"></canvas>
+                </span>
+                <h4>SCSS</h4>
+            </div>
+            <div class="col-sm-6 col-md-4 skill">
+                <span class="chart">
+                    <canvas width="145px" height="145px" class="canvas6"></canvas>
+                </span>
+                <h4>ajax</h4>
+            </div>
+        </div>
+    </div>
+</div>
+<!--skills end-->
+
+<!--experience start-->
+<div id="experience" class="experience">
+    <div class="container">
+        <div class="exp-top">
+            <h3 class="top-title">Experience</h3>
+            <span class="line"></span>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="timeline">
+                    <li>
+                        <div class="timeline-img">
+                            <h4>June 2015 <br>
+                                - <br>
+                                Dec 2015 </h4>
+                        </div>
+                        <div class="timeline-text left-animation">
+                            <div class="timeline-head">
+                                <h4>Working Time</h4>
+                                <h4 class="subhead">Front-end Developer</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Become a qualified Front-end Developer,master related information of HTML5 and CSS3</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-2">
+                        <div class="timeline-img">
+                            <h4>June 2014<br>
+                                - <br>
+                                Sep 2014
+                            </h4>
+                        </div>
+                        <div class="timeline-text right-animation">
+                            <div class="timeline-head">
+                                <h4>Internship Time</h4>
+                                <h4 class="subhead">UI Designer</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Learning knowledge of Photoshop,AI,Web Design,acquire the relevant skills about working
+                                </p>
+                            </div>
+                        </div>
+                    </liclass>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container"></div>
+</div>
+<!--experience end-->
+
+<!--achievements start-->
+<div id="achievements" class="setion">
+    <div class="container">
+        <div class="setion-title">
+            <h3 class="top-title" >Some Stats</h3>
+            <span class="line"></span>
+        </div>
+        <div class="row">
+            <div class="col-sm-3 col-md-3">
+                <div class="achievement-box">
+                    <i class="fa" data-icon="xiaolian"></i>
+                    <span class="count"></span>
+                    <h4>Happy clients</h4>
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-3">
+                <div class="achievement-box">
+                    <i class="fa" data-icon="work"></i>
+                    <span class="count"></span>
+                    <h4>Working hours</h4>
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-3">
+                <div class="achievement-box">
+                    <i class="fa" data-icon="study"></i>
+                    <span class="count"></span>
+                    <h4>Study hours</h4>
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-3">
+                <div class="achievement-box">
+                    <i class="fa" data-icon="relax"></i>
+                    <span class="count"></span>
+                    <h4>relaxing hours</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--achievements end-->
+
+<!--portfolio start-->
+<div id="portfolio">
+    <div class="container">
+        <div class="setion">
+            <h3 class="top-title">My Portfolio</h3>
+            <span class="line"></span>
+        </div>
+        <div class="categories">
+            <!--<ul class="cat">-->
+                <!--<li>-->
+                    <!--<ol class="type">-->
+                        <!--<li><a href="javascript:;" class="active">All</a></li>-->
+                        <!--<li><a href="javascript:;" class="active">Web Design</a></li>-->
+                        <!--<li><a href="javascript:;" class="active">App Design</a></li>-->
+                        <!--<li><a href="javascript:;" class="active">UI</a></li>-->
+                    <!--</ol>-->
+                <!--</li>-->
+            <!--</ul>-->
+            <div class="clearfix"></div>
+        </div>
+        <div class="row">
+            <div class="portfolio-items">
+                <div class="col-sm-6 col-md-3 col-lg-3 web">
+                    <div class="portfolio-item">
+                        <div class="hover-bg">
+                            <a href="http://yxxlxr.duapp.com/">
+                                <div class="hover-text">
+                                    <h4>Contact</h4>
+                                    <small>App Development</small>  <!--呈现小号效果-->
+                                    <div class="clearfix"></div>
+                                    <i data-icon="zoom"></i>
+                                </div>
+                                <img src="img/Contact.png" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3 app">
+                    <div class="portfolio-item">
+                        <div class="hover-bg">
+                            <a href="https://yanxuanxian.github.io/yintaishouye">
+                                <div class="hover-text">
+                                    <h4>Apple</h4>
+                                    <small>Web Development</small>  <!--呈现小号效果-->
+                                    <div class="clearfix"></div>
+                                    <i data-icon="zoom"></i>
+                                </div>
+                                <img src="img/apple.jpg" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3 web">
+                    <div class="portfolio-item">
+                        <div class="hover-bg">
+                            <a href="https://yanxuanxian.github.io/yintaishouye">
+                                <div class="hover-text">
+                                    <h4>YinTai</h4>
+                                    <small>Web Development</small>  <!--呈现小号效果-->
+                                    <div class="clearfix"></div>
+                                    <i data-icon="zoom"></i>
+                                </div>
+                                <img src="img/yintai.png" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3 web">
+                    <div class="portfolio-item">
+                        <div class="hover-bg">
+                            <a href="https://yanxuanxian.github.io/tmall">
+                                <div class="hover-text">
+                                    <h4>TianMao</h4>
+                                    <small>Web Development</small>  <!--呈现小号效果-->
+                                    <div class="clearfix"></div>
+                                    <i data-icon="zoom"></i>
+                                </div>
+                                <img src="img/tianmao.jpg" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3 app">
+                    <div class="portfolio-item">
+                        <div class="hover-bg">
+                            <a href="https://yanxuanxian.github.io/snake">
+                                <div class="hover-text">
+                                    <h4>Snake</h4>
+                                    <small>GAME Development</small>  <!--呈现小号效果-->
+                                    <div class="clearfix"></div>
+                                    <i data-icon="zoom"></i>
+                                </div>
+                                <img src="img/snake.png" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3 ui">
+                    <div class="portfolio-item">
+                        <div class="hover-bg">
+                            <a href="https://yanxuanxian.github.io/poker">
+                                <div class="hover-text">
+                                    <h4>Poker</h4>
+                                    <small>GAME Development</small>  <!--呈现小号效果-->
+                                    <div class="clearfix"></div>
+                                    <i data-icon="zoom"></i>
+                                </div>
+                                <img src="img/poker.png" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3 ui app">
+                    <div class="portfolio-item">
+                        <div class="hover-bg">
+                            <a href="https://yanxuanxian.github.io/wuziqi">
+                                <div class="hover-text">
+                                    <h4>Wuziqi</h4>
+                                    <small>GAME Development</small>  <!--呈现小号效果-->
+                                    <div class="clearfix"></div>
+                                    <i data-icon="zoom"></i>
+                                </div>
+                                <img src="img/wuziqi.jpg" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-3 web">
+                    <div class="portfolio-item">
+                        <div class="hover-bg">
+                            <a href="javascript:;">
+                                <div class="hover-text">
+                                    <h4>QQ Music</h4>
+                                    <small>App Development</small>  <!--呈现小号效果-->
+                                    <div class="clearfix"></div>
+                                    <i data-icon="zoom"></i>
+                                </div>
+                                <img src="img/music.jpg" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--portfolio end-->
+
+<!--contact start-->
+<div id="contact" class="contact">
+    <div class="container">
+        <img src="" alt=""/>
+        <div class="contact-info">
+            <h3 class="top-title">Contact</h3>
+            <span class="line"></span>
+        </div>
+        <div class="contact-grids">
+            <div class="col-md-5 contact-left">
+                <h3>Say Hi To Me</h3>
+                <div class="stripb"></div>
+                    <ul>
+                        <li>Yan Xuanxian</li>
+                        <li>Shan Xi, Tai Yuan</li>
+                        <li>Nov 1993, China</li>
+                        <li>526410806</li>
+                        <li><a href="#">526410806@qq.com</a></li>
+                        <li><a href="#">13546383474</a></li>
+                    </ul>
+            </div>
+            <div class="col-md-7 contact-right">
+                <h3>Drop Me A Line</h3>
+                <div class="stripb"></div>
+                <form>
+                    <input type="text" value="Name" onfocus="this.value='';" onblur="if(this.value=='') {this.value='Name';}" required=""/> <!--提交前必须填写-->
+                    <input type="text" value="Email" onfocus="this.value='';" onblur="if(this.value=='') {this.value='Email';}" required=""/>
+                    <textarea type="text" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}" required="">Message</textarea>
+                    <input type="submit" value="SEND"/>
+                </form>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
+<!--contact end-->
+
+<!--footer start-->
+<div class="footer">
+    <div class="container">
+        <p>Copyright &copy; 2016 Song. Template by <a href="">Options</a></p>
+    </div>
+</div>
+<!--footer end-->
 </body>
 </html>
