--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>闫宣先个人站</title>
+    <meta name="viewport" conten="width=device-width">
+    <title>闫宣先个人主页</title>
     <link rel="stylesheet" href="css/index.css"/>
     <link rel="stylesheet" href="css/iconfont.css"/>
     <link rel="stylesheet" href="css/font.css"/>
@@ -271,7 +272,7 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 app">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="https://yanxuanxian.github.io/yintaishouye">
+                            <a href="/apple">
                                 <div class="hover-text">
                                     <h4>Apple</h4>
                                     <small>Web Development</small>  <!--呈现小号效果-->
@@ -286,7 +287,7 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 web">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="https://yanxuanxian.github.io/yintaishouye">
+                            <a href="/yintaishouye">
                                 <div class="hover-text">
                                     <h4>YinTai</h4>
                                     <small>Web Development</small>  <!--呈现小号效果-->
@@ -301,7 +302,7 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 web">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="https://yanxuanxian.github.io/tmall">
+                            <a href="/tmall">
                                 <div class="hover-text">
                                     <h4>TianMao</h4>
                                     <small>Web Development</small>  <!--呈现小号效果-->
@@ -316,7 +317,7 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 app">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="https://yanxuanxian.github.io/snake">
+                            <a href="/snake">
                                 <div class="hover-text">
                                     <h4>Snake</h4>
                                     <small>GAME Development</small>  <!--呈现小号效果-->
@@ -331,7 +332,7 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 ui">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="https://yanxuanxian.github.io/poker">
+                            <a href="/poker">
                                 <div class="hover-text">
                                     <h4>Poker</h4>
                                     <small>GAME Development</small>  <!--呈现小号效果-->
@@ -346,7 +347,7 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 ui app">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="https://yanxuanxian.github.io/wuziqi">
+                            <a href="/wuziqi">
                                 <div class="hover-text">
                                     <h4>Wuziqi</h4>
                                     <small>GAME Development</small>  <!--呈现小号效果-->
@@ -361,7 +362,7 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 web">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="javascript:;">
+                            <a href="/music">
                                 <div class="hover-text">
                                     <h4>QQ Music</h4>
                                     <small>App Development</small>  <!--呈现小号效果-->
