--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 <!--banner start-->
 <div id="page-top" class="banner">
     <div class="text">
-        <h1>We work with passion<br/> to make good design prevail</h1>
-        <p class="wui">I’m a WUI designer born in China</p>
+        <h1>We work with passion<br/> to make good program prevail</h1>
+        <p class="wui">I’m a WUI programmer born in China</p>
         <p><a class="btn" href="#portfolio">Learn more</a></p>
     </div>
     <div class="con">
-        <a href="javascript:;" class="lead-link">Continua
+        <a href="javascript:;" class="lead-link">Continue
             <div class="up" data-icon="up"></div>
         </a>
     </div>
@@ -74,12 +74,12 @@
             <span class="line"></span>
         <div class="row">
             <div class="head-img">
-                <img src="" alt=""/>
+                <img src="img/me.jpg" alt=""/>
             </div>
         </div>
             <div class="row">
                 <p class="about-p">
-                    Hello! I am a computer science graduates. Thank you for your busy schedule to take some time to read this , provided me with a chance of success. 
+                    Hello! I am a computer science graduate. Thank you for your busy schedule to take some time to read this , provided me with a chance of success. 
                 </p>
                 <p>
                     In the four years of  study and life, I studied the content ranging from basic computer knowledge to use and many other aspects. Of these knowledge, I have knowledge in this field have a certain degree of understanding and mastering, this is a professional tool, and the ability to make use of this tool is the most important, in parallel with a variety of courses relevant and practical in practice, with a certain degree of practical ability and technology.
@@ -126,13 +126,13 @@
                 <span class="chart">
                     <canvas width="145px" height="145px" class="canvas5"></canvas>
                 </span>
-                <h4>SCSS</h4>
+                <h4>Sass</h4>
             </div>
             <div class="col-sm-6 col-md-4 skill">
                 <span class="chart">
                     <canvas width="145px" height="145px" class="canvas6"></canvas>
                 </span>
-                <h4>ajax</h4>
+                <h4>Ajax</h4>
             </div>
         </div>
     </div>
@@ -257,14 +257,14 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 web">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="http://yxxlxr.duapp.com/">
+                            <a href="/icloud">
                                 <div class="hover-text">
-                                    <h4>Contact</h4>
+                                    <h4>icloud</h4>
                                     <small>App Development</small>  <!--呈现小号效果-->
                                     <div class="clearfix"></div>
                                     <i data-icon="zoom"></i>
                                 </div>
-                                <img src="img/Contact.png" alt=""/>
+                                <img src="img/icloud.png" alt=""/>
                             </a>
                         </div>
                     </div>
@@ -302,9 +302,9 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 web">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="/tmall">
+                            <a href="/mobiletmall">
                                 <div class="hover-text">
-                                    <h4>TianMao</h4>
+                                    <h4>MobileTianMao</h4>
                                     <small>Web Development</small>  <!--呈现小号效果-->
                                     <div class="clearfix"></div>
                                     <i data-icon="zoom"></i>
